(add new changes on top of this file)

Änderungen
----------

v0.8.4 (??.06.2010)
 * tx_rnbase_maps_google_Map: JS initialize fixed
 * tx_rnbase_maps_Coord: variables fixed
 * $_SERVER is included in error mail
 * Visitors for ListBuilder

v0.8.3 (07.06.2010) (not released)
 * New marker ###.._TOTALLINE### in ListBuilder. It shows current line number of a large list with pagebrowser.
 * tx_rnbase_util_SearchBase: New option "callback" for doSelect

v0.8.2 (07.06.2010) (not released)
 * mod_Tables: getHeadline() uses title string as fallback
 * util_FormTool: new method getStoredRequestData()
 * tx_rnbase_util_DB: New option "callback" for doSelect

v0.8.1 (01.06.2010) (not released)
 * tx_rnbase_util_FormTool::createEditButton with confirm option
 * tx_rnbase_util_Link: new TS options noCache and noHash
 * SearchBase: Ignore invalid queries for SEARCH_FIELD_JOINED
 * tx_rnbase_util_DB: Bugfix for OP_LIKE with multiple strings. 
 * tx_rnbase_util_DB: New operator OP_LIKE_CONST.

v0.8.0 (11.05.2010)
 * Additional check for installed DAM in tx_rnbase_util_TSDAM
 * Current SITE_URL is included in error mail

v0.7.8 (02.05.2010) (not released)
 * New option forceException4Mayday in EM
 * New method tx_rnbase_util_Templates::getSubpart

v0.7.7 (01.05.2010) (not released)
 * New class tx_rnbase_util_SimpleMarker
 * GET and POST vars for error mail added
 * tx_rnbase_Controller: missing include fixed
 
v0.7.6 (29.04.2010) (not released)
 * ErrorMail: Send only one mail within one minute.
 * It is possible to configure error messages for uncaught exceptions. Create a default language label ERROR_default in your extension language file. You can define labels for each exception error code like ERROR_123.

v0.7.5 (29.04.2010) (not released)
 * mod_BaseModFunc: new default marker with performance data: ###MOD_PARSETIME###, ###MOD_MEMUSED###, ###MOD_MEMSTART###, ###MOD_MEMEMD###

v0.7.4 (24.04.2010) (not released)
 * Configuration of TYPO3 Cache fixed