@@ -8,6 +8,7 @@ v0.8.4 (??.06.2010)
  * tx_rnbase_maps_Coord: variables fixed
  * $_SERVER is included in error mail
  * Visitors for ListBuilder
+ * New method tx_rnbase_util_Templates::getSubpartFromFile()
 
 v0.8.3 (07.06.2010) (not released)
  * New marker ###.._TOTALLINE### in ListBuilder. It shows current line number of a large list with pagebrowser.
